# halogin

./: .env  .gitmodules  Cargo.toml  DESIGN.md  build.rs  diesel.toml  package-lock.json
.cargo/: config.toml
.github/workflows/: check.yml
crates/build-svelte/: Cargo.toml  build.rs
crates/build-svelte/src/: lib.rs
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.html  app.pcss  service-worker.js
frontend/src/lib/: types.ts  ws.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  CreatorLoginComponent.svelte  Footer.svelte  GoogleLogin.svelte  Home.svelte  NavBar.svelte  StreamerLoginComponent.svelte  TwitchLogin.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/company/profile/: +page.svelte
frontend/src/routes/creator/: card.svelte  creator-card.svelte
frontend/src/routes/creator/profile/: +page.svelte
frontend/src/routes/login_redirect/: +page.svelte
frontend/src/routes/search/: +page.svelte
frontend/src/routes/streamerlogin/: +page.svelte
frontend/src/routes/streamerregister/: +page.svelte
migrations/2024-02-06-050230_users/: down.sql  up.sql
migrations/2024-03-26-044707_company/: down.sql  up.sql
src/: auth.rs  lib.rs  main.rs  models.rs  schema.rs  state.rs
src/chat/: mod.rs
src/company/: mod.rs
src/creator/: mod.rs
src/db/: company.rs  embedding.rs  mod.rs  schema.rs  sql_types.rs
src/google/: mod.rs  youtube.rs
src/rpc/: mod.rs
src/search/: db.rs
src/storage/: mod.rs
src/twitch/: mod.rs
src/utils/: formdata.rs  mod.rs  oauth.rs
src/ws/: mod.rs
