[package]
name = "halogin"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["proc_macros"]

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
diesel = { version = "2.1.4", features = ["postgres", "uuid", "time"] }
diesel-async = { version = "0.4.1", features = [
    "deadpool",
    "tokio",
    "postgres",
] }
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
oauth2 = "4.4.2"
proc_macros = { path = "proc_macros" }
rand = "0.8.5"
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4", "rng"] }
