[package]
name = "halogin"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/*"]

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
dashmap = "5.5.3"
diesel = { version = "2.1.4", features = ["postgres", "uuid", "time"] }
diesel-async = { version = "0.4.1", features = [
    "deadpool",
    "tokio",
    "postgres",
] }
dotenvy = "0.15.7"
fcm = { path = "crates/fmc-rust" }
futures = "0.3.30"
fxhash = "0.2.1"
jsonwebtoken = "9.2.0"
oauth2 = "5.0.0-alpha.3"
rand = "0.8.5"
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
slotmap = "1.0.7"
thiserror = "1.0.58"
time = { version = "0.3.34", features = ["serde"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4", "rng", "serde"] }
