[package]
name = "halogin"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/*"]

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.4", features = ["multipart", "ws"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
build-svelte = { path = "crates/build-svelte", optional = true }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
dashmap = "5.5.3"
diesel = { version = "2.1.4", features = ["postgres", "uuid", "time"] }
diesel-async = { version = "0.4.1", features = [
    "deadpool",
    "tokio",
    "postgres",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
fcm = { path = "crates/fmc-rust" }
futures = "0.3.30"
fxhash = "0.2.1"
hf-hub = { version = "0.3.2", features = ["tokio"] }
http-body = "1.0.0"
image = "0.25.1"
jsonwebtoken = "9.2.0"
mime_guess = "2.0.4"
oauth2 = "5.0.0-alpha.3"
pgvector = { version = "0.3", features = ["diesel"] }
qdrant-client = "1.8.0"
rand = "0.8.5"
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
slotmap = "1.0.7"
thiserror = "1.0.58"
time = { version = "0.3.34", features = ["serde"] }
tokenizers = { version = "0.19.1", default-features = false, features = [
    "onig",
] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "rng", "serde"] }

[features]
default = ["build-webpage"]
build-webpage = ["build-svelte"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
